--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,7 +59,7 @@
     </div>
 </nav>
 
-<h1>Aplicación web</h1>
+<h1>Aplicación web 2022</h1>
 <h2>para el cálculo planillas de sueldo</h2>
 
 </body>
